src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    BOLEANO
    NOESNADA
    PUNTO
    BEGIN
    POW
    FUNCTION
    END
    VAR
    RAIZ
    COMSIMPLE
    SQRT
    POTENCIA
    COMDOBLE
    CIRCULO

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM cuadrupro ID DOSPUNTOS p2
Rule 2     p2 -> p3
Rule 3     p2 -> p4
Rule 4     p2 -> p5
Rule 5     p3 -> declaracion p3
Rule 6     p3 -> p4
Rule 7     p4 -> function p4
Rule 8     p4 -> p5
Rule 9     p5 -> cuadrupro2 bloque
Rule 10    cuadrupro -> empty
Rule 11    cuadrupro2 -> empty
Rule 12    bloque -> LKEY b3 b4 b5
Rule 13    b3 -> declaracion b3
Rule 14    b3 -> empty
Rule 15    b4 -> estatuto b4
Rule 16    b4 -> empty
Rule 17    b5 -> RKEY
Rule 18    expresion -> exp e2
Rule 19    e2 -> e3
Rule 20    e2 -> empty
Rule 21    e3 -> GT exp
Rule 22    e3 -> LT exp
Rule 23    e3 -> LT GT exp
Rule 24    exp -> termino tagsacops exp2
Rule 25    exp2 -> SUMA tagop exp
Rule 26    exp2 -> RESTA tagop exp
Rule 27    exp2 -> empty
Rule 28    tagop -> empty
Rule 29    tagsacops -> empty
Rule 30    declaracion -> tipo ID decla1
Rule 31    decla1 -> declafinal
Rule 32    decla1 -> LBRACKET exp decla2
Rule 33    decla2 -> RBRACKET declafinal
Rule 34    decla2 -> COMA exp decla2
Rule 35    declafinal -> PUNTOCOMA
Rule 36    tipo -> INT
Rule 37    tipo -> FLOAT
Rule 38    tipo -> CHAR
Rule 39    tipo -> STRING
Rule 40    tipo -> BOOL
Rule 41    asignacion -> ID asig2
Rule 42    asig2 -> LBRACKET exp asig3
Rule 43    asig2 -> asigfinal
Rule 44    asig3 -> COMA exp asig3
Rule 45    asig3 -> RBRACKET asigfinal
Rule 46    asigfinal -> IGUAL expresion PUNTOCOMA
Rule 47    print -> PRINT LPARENT pr2
Rule 48    pr2 -> expresion pr3
Rule 49    pr2 -> CADENA pr3
Rule 50    pr3 -> pr2
Rule 51    pr3 -> RPARENT PUNTOCOMA
Rule 52    condicion -> IF LKEY expresion RKEY bloque c2
Rule 53    c2 -> ELSE bloque PUNTOCOMA
Rule 54    c2 -> PUNTOCOMA
Rule 55    termino -> factor tagsacopm te2
Rule 56    te2 -> MULT termino
Rule 57    te2 -> DIV termino
Rule 58    te2 -> empty
Rule 59    tagsacopm -> empty
Rule 60    factor -> LPARENT tagfondofalso expresion RPARENT tagsacafondo
Rule 61    factor -> f2
Rule 62    factor -> f3
Rule 63    factor -> f6
Rule 64    factor -> f7
Rule 65    f2 -> varcte
Rule 66    f3 -> ID
Rule 67    tagfondofalso -> empty
Rule 68    tagsacafondo -> empty
Rule 69    f7 -> ID LBRACKET exp f8
Rule 70    f8 -> COMA exp f8
Rule 71    f8 -> RBRACKET
Rule 72    f6 -> llamafuncion
Rule 73    estatuto -> asignacion
Rule 74    estatuto -> print
Rule 75    estatuto -> condicion
Rule 76    estatuto -> ciclowhile
Rule 77    estatuto -> ciclodowhile
Rule 78    estatuto -> ciclofor
Rule 79    estatuto -> read
Rule 80    estatuto -> comentario
Rule 81    estatuto -> cuadrado
Rule 82    estatuto -> triangulo
Rule 83    estatuto -> casa
Rule 84    estatuto -> rectangulo
Rule 85    estatuto -> cubo
Rule 86    estatuto -> trapecio
Rule 87    estatuto -> estrella
Rule 88    estatuto -> mueve
Rule 89    estatuto -> levanta
Rule 90    estatuto -> apoya
Rule 91    estatuto -> dimension
Rule 92    estatuto -> llamafuncion
Rule 93    estatuto -> if
Rule 94    comentario -> COMENTARIO
Rule 95    varcte -> ENTERO
Rule 96    varcte -> FLOTANTE
Rule 97    varcte -> CADENA
Rule 98    varcte -> CARACTER
Rule 99    ciclowhile -> WHILE LPARENT expresion RPARENT bloque
Rule 100   ciclodowhile -> DO bloque WHILE LPARENT expresion RPARENT PUNTOCOMA
Rule 101   read -> ID IGUAL READ LPARENT RPARENT PUNTOCOMA
Rule 102   ciclofor -> FOR LPARENT asignacion expresion asignacion RPARENT bloque
Rule 103   if -> IF LPARENT expresion RPARENT bloque if2
Rule 104   if2 -> empty
Rule 105   if2 -> ELSE bloque
Rule 106   cuadrado -> CUADRADO LPARENT exp RPARENT PUNTOCOMA
Rule 107   triangulo -> TRIANGULO LPARENT exp RPARENT PUNTOCOMA
Rule 108   rectangulo -> RECTANGULO LPARENT exp COMA exp RPARENT PUNTOCOMA
Rule 109   casa -> CASA LPARENT exp COMA exp RPARENT PUNTOCOMA
Rule 110   estrella -> ESTRELLA LPARENT exp RPARENT PUNTOCOMA
Rule 111   cubo -> CUBO LPARENT exp RPARENT PUNTOCOMA
Rule 112   mueve -> MUEVE LPARENT exp COMA exp RPARENT PUNTOCOMA
Rule 113   levanta -> LEVANTA LPARENT RPARENT PUNTOCOMA
Rule 114   apoya -> APOYA LPARENT RPARENT PUNTOCOMA
Rule 115   trapecio -> TRAPECIO LPARENT exp COMA exp RPARENT PUNTOCOMA
Rule 116   dimension -> DIMENSION LPARENT exp RPARENT PUNTOCOMA
Rule 117   function -> tipo ID LPARENT funct11
Rule 118   function -> VOID ID LPARENT funct11
Rule 119   funct11 -> function4
Rule 120   funct11 -> funct2
Rule 121   funct2 -> tipo ID funct3
Rule 122   funct3 -> COMA funct2
Rule 123   funct3 -> function4
Rule 124   function4 -> RPARENT bloque
Rule 125   llamafuncion -> ID LPARENT llamaf11
Rule 126   llamaf11 -> llamaf2
Rule 127   llamaf11 -> llamaf4
Rule 128   llamaf2 -> exp llamaf3
Rule 129   llamaf3 -> COMA llamaf2
Rule 130   llamaf3 -> llamaf4
Rule 131   llamaf4 -> RPARENT
Rule 132   empty -> <empty>

Terminals, with rules where they appear

APOYA                : 114
BEGIN                : 
BOLEANO              : 
BOOL                 : 40
CADENA               : 49 97
CARACTER             : 98
CASA                 : 109
CHAR                 : 38
CIRCULO              : 
COMA                 : 34 44 70 108 109 112 115 122 129
COMDOBLE             : 
COMENTARIO           : 94
COMSIMPLE            : 
CUADRADO             : 106
CUBO                 : 111
DIMENSION            : 116
DIV                  : 57
DO                   : 100
DOSPUNTOS            : 1
ELSE                 : 53 105
END                  : 
ENTERO               : 95
ESTRELLA             : 110
FLOAT                : 37
FLOTANTE             : 96
FOR                  : 102
FUNCTION             : 
GT                   : 21 23
ID                   : 1 30 41 66 69 101 117 118 121 125
IF                   : 52 103
IGUAL                : 46 101
INT                  : 36
LBRACKET             : 32 42 69
LEVANTA              : 113
LKEY                 : 12 52
LPARENT              : 47 60 99 100 101 102 103 106 107 108 109 110 111 112 113 114 115 116 117 118 125
LT                   : 22 23
MUEVE                : 112
MULT                 : 56
NOESNADA             : 
POTENCIA             : 
POW                  : 
PRINT                : 47
PROGRAM              : 1
PUNTO                : 
PUNTOCOMA            : 35 46 51 53 54 100 101 106 107 108 109 110 111 112 113 114 115 116
RAIZ                 : 
RBRACKET             : 33 45 71
READ                 : 101
RECTANGULO           : 108
RESTA                : 26
RKEY                 : 17 52
RPARENT              : 51 60 99 100 101 102 103 106 107 108 109 110 111 112 113 114 115 116 124 131
SQRT                 : 
STRING               : 39
SUMA                 : 25
TRAPECIO             : 115
TRIANGULO            : 107
VAR                  : 
VOID                 : 118
WHILE                : 99 100
error                : 

Nonterminals, with rules where they appear

apoya                : 90
asig2                : 41
asig3                : 42 44
asigfinal            : 43 45
asignacion           : 73 102 102
b3                   : 12 13
b4                   : 12 15
b5                   : 12
bloque               : 9 52 53 99 100 102 103 105 124
c2                   : 52
casa                 : 83
ciclodowhile         : 77
ciclofor             : 78
ciclowhile           : 76
comentario           : 80
condicion            : 75
cuadrado             : 81
cuadrupro            : 1
cuadrupro2           : 9
cubo                 : 85
decla1               : 30
decla2               : 32 34
declafinal           : 31 33
declaracion          : 5 13
dimension            : 91
e2                   : 18
e3                   : 19
empty                : 10 11 14 16 20 27 28 29 58 59 67 68 104
estatuto             : 15
estrella             : 87
exp                  : 18 21 22 23 25 26 32 34 42 44 69 70 106 107 108 108 109 109 110 111 112 112 115 115 116 128
exp2                 : 24
expresion            : 46 48 52 60 99 100 102 103
f2                   : 61
f3                   : 62
f6                   : 63
f7                   : 64
f8                   : 69 70
factor               : 55
funct11              : 117 118
funct2               : 120 122
funct3               : 121
function             : 7
function4            : 119 123
if                   : 93
if2                  : 103
levanta              : 89
llamaf11             : 125
llamaf2              : 126 129
llamaf3              : 128
llamaf4              : 127 130
llamafuncion         : 72 92
mueve                : 88
p2                   : 1
p3                   : 2 5
p4                   : 3 6 7
p5                   : 4 8
pr2                  : 47 50
pr3                  : 48 49
print                : 74
program              : 0
read                 : 79
rectangulo           : 84
tagfondofalso        : 60
tagop                : 25 26
tagsacafondo         : 60
tagsacopm            : 55
tagsacops            : 24
te2                  : 55
termino              : 24 56 57
tipo                 : 30 117 121
trapecio             : 86
triangulo            : 82
varcte               : 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM cuadrupro ID DOSPUNTOS p2

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . cuadrupro ID DOSPUNTOS p2
    (10) cuadrupro -> . empty
    (132) empty -> .

    ID              reduce using rule 132 (empty -> .)

    cuadrupro                      shift and go to state 3
    empty                          shift and go to state 4

state 3

    (1) program -> PROGRAM cuadrupro . ID DOSPUNTOS p2

    ID              shift and go to state 5


state 4

    (10) cuadrupro -> empty .

    ID              reduce using rule 10 (cuadrupro -> empty .)


state 5

    (1) program -> PROGRAM cuadrupro ID . DOSPUNTOS p2

    DOSPUNTOS       shift and go to state 6


state 6

    (1) program -> PROGRAM cuadrupro ID DOSPUNTOS . p2
    (2) p2 -> . p3
    (3) p2 -> . p4
    (4) p2 -> . p5
    (5) p3 -> . declaracion p3
    (6) p3 -> . p4
    (7) p4 -> . function p4
    (8) p4 -> . p5
    (9) p5 -> . cuadrupro2 bloque
    (30) declaracion -> . tipo ID decla1
    (117) function -> . tipo ID LPARENT funct11
    (118) function -> . VOID ID LPARENT funct11
    (11) cuadrupro2 -> . empty
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . CHAR
    (39) tipo -> . STRING
    (40) tipo -> . BOOL
    (132) empty -> .

    VOID            shift and go to state 8
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 9
    STRING          shift and go to state 13
    BOOL            shift and go to state 20
    LKEY            reduce using rule 132 (empty -> .)

    p2                             shift and go to state 14
    p3                             shift and go to state 15
    tipo                           shift and go to state 10
    p4                             shift and go to state 16
    p5                             shift and go to state 17
    function                       shift and go to state 12
    cuadrupro2                     shift and go to state 7
    empty                          shift and go to state 11
    declaracion                    shift and go to state 21

state 7

    (9) p5 -> cuadrupro2 . bloque
    (12) bloque -> . LKEY b3 b4 b5

    LKEY            shift and go to state 22

    bloque                         shift and go to state 23

state 8

    (118) function -> VOID . ID LPARENT funct11

    ID              shift and go to state 24


state 9

    (38) tipo -> CHAR .

    ID              reduce using rule 38 (tipo -> CHAR .)


state 10

    (30) declaracion -> tipo . ID decla1
    (117) function -> tipo . ID LPARENT funct11

    ID              shift and go to state 25


state 11

    (11) cuadrupro2 -> empty .

    LKEY            reduce using rule 11 (cuadrupro2 -> empty .)


state 12

    (7) p4 -> function . p4
    (7) p4 -> . function p4
    (8) p4 -> . p5
    (117) function -> . tipo ID LPARENT funct11
    (118) function -> . VOID ID LPARENT funct11
    (9) p5 -> . cuadrupro2 bloque
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . CHAR
    (39) tipo -> . STRING
    (40) tipo -> . BOOL
    (11) cuadrupro2 -> . empty
    (132) empty -> .

    VOID            shift and go to state 8
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 9
    STRING          shift and go to state 13
    BOOL            shift and go to state 20
    LKEY            reduce using rule 132 (empty -> .)

    function                       shift and go to state 12
    p4                             shift and go to state 26
    tipo                           shift and go to state 27
    cuadrupro2                     shift and go to state 7
    p5                             shift and go to state 28
    empty                          shift and go to state 11

state 13

    (39) tipo -> STRING .

    ID              reduce using rule 39 (tipo -> STRING .)


state 14

    (1) program -> PROGRAM cuadrupro ID DOSPUNTOS p2 .

    $end            reduce using rule 1 (program -> PROGRAM cuadrupro ID DOSPUNTOS p2 .)


state 15

    (2) p2 -> p3 .

    $end            reduce using rule 2 (p2 -> p3 .)


state 16

    (3) p2 -> p4 .
    (6) p3 -> p4 .

  ! reduce/reduce conflict for $end resolved using rule 3 (p2 -> p4 .)
    $end            reduce using rule 3 (p2 -> p4 .)

  ! $end            [ reduce using rule 6 (p3 -> p4 .) ]


state 17

    (4) p2 -> p5 .
    (8) p4 -> p5 .

  ! reduce/reduce conflict for $end resolved using rule 4 (p2 -> p5 .)
    $end            reduce using rule 4 (p2 -> p5 .)

  ! $end            [ reduce using rule 8 (p4 -> p5 .) ]


state 18

    (36) tipo -> INT .

    ID              reduce using rule 36 (tipo -> INT .)


state 19

    (37) tipo -> FLOAT .

    ID              reduce using rule 37 (tipo -> FLOAT .)


state 20

    (40) tipo -> BOOL .

    ID              reduce using rule 40 (tipo -> BOOL .)


state 21

    (5) p3 -> declaracion . p3
    (5) p3 -> . declaracion p3
    (6) p3 -> . p4
    (30) declaracion -> . tipo ID decla1
    (7) p4 -> . function p4
    (8) p4 -> . p5
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . CHAR
    (39) tipo -> . STRING
    (40) tipo -> . BOOL
    (117) function -> . tipo ID LPARENT funct11
    (118) function -> . VOID ID LPARENT funct11
    (9) p5 -> . cuadrupro2 bloque
    (11) cuadrupro2 -> . empty
    (132) empty -> .

    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 9
    STRING          shift and go to state 13
    BOOL            shift and go to state 20
    VOID            shift and go to state 8
    LKEY            reduce using rule 132 (empty -> .)

    function                       shift and go to state 12
    p3                             shift and go to state 29
    tipo                           shift and go to state 10
    p4                             shift and go to state 30
    p5                             shift and go to state 28
    cuadrupro2                     shift and go to state 7
    empty                          shift and go to state 11
    declaracion                    shift and go to state 21

state 22

    (12) bloque -> LKEY . b3 b4 b5
    (13) b3 -> . declaracion b3
    (14) b3 -> . empty
    (30) declaracion -> . tipo ID decla1
    (132) empty -> .
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . CHAR
    (39) tipo -> . STRING
    (40) tipo -> . BOOL

    ID              reduce using rule 132 (empty -> .)
    PRINT           reduce using rule 132 (empty -> .)
    IF              reduce using rule 132 (empty -> .)
    WHILE           reduce using rule 132 (empty -> .)
    DO              reduce using rule 132 (empty -> .)
    FOR             reduce using rule 132 (empty -> .)
    COMENTARIO      reduce using rule 132 (empty -> .)
    CUADRADO        reduce using rule 132 (empty -> .)
    TRIANGULO       reduce using rule 132 (empty -> .)
    CASA            reduce using rule 132 (empty -> .)
    RECTANGULO      reduce using rule 132 (empty -> .)
    CUBO            reduce using rule 132 (empty -> .)
    TRAPECIO        reduce using rule 132 (empty -> .)
    ESTRELLA        reduce using rule 132 (empty -> .)
    MUEVE           reduce using rule 132 (empty -> .)
    LEVANTA         reduce using rule 132 (empty -> .)
    APOYA           reduce using rule 132 (empty -> .)
    DIMENSION       reduce using rule 132 (empty -> .)
    RKEY            reduce using rule 132 (empty -> .)
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 9
    STRING          shift and go to state 13
    BOOL            shift and go to state 20

    tipo                           shift and go to state 31
    declaracion                    shift and go to state 32
    b3                             shift and go to state 33
    empty                          shift and go to state 34

state 23

    (9) p5 -> cuadrupro2 bloque .

    $end            reduce using rule 9 (p5 -> cuadrupro2 bloque .)


state 24

    (118) function -> VOID ID . LPARENT funct11

    LPARENT         shift and go to state 35


state 25

    (30) declaracion -> tipo ID . decla1
    (117) function -> tipo ID . LPARENT funct11
    (31) decla1 -> . declafinal
    (32) decla1 -> . LBRACKET exp decla2
    (35) declafinal -> . PUNTOCOMA

    LPARENT         shift and go to state 37
    LBRACKET        shift and go to state 36
    PUNTOCOMA       shift and go to state 38

    decla1                         shift and go to state 39
    declafinal                     shift and go to state 40

state 26

    (7) p4 -> function p4 .

    $end            reduce using rule 7 (p4 -> function p4 .)


state 27

    (117) function -> tipo . ID LPARENT funct11

    ID              shift and go to state 41


state 28

    (8) p4 -> p5 .

    $end            reduce using rule 8 (p4 -> p5 .)


state 29

    (5) p3 -> declaracion p3 .

    $end            reduce using rule 5 (p3 -> declaracion p3 .)


state 30

    (6) p3 -> p4 .

    $end            reduce using rule 6 (p3 -> p4 .)


state 31

    (30) declaracion -> tipo . ID decla1

    ID              shift and go to state 42


state 32

    (13) b3 -> declaracion . b3
    (13) b3 -> . declaracion b3
    (14) b3 -> . empty
    (30) declaracion -> . tipo ID decla1
    (132) empty -> .
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . CHAR
    (39) tipo -> . STRING
    (40) tipo -> . BOOL

    ID              reduce using rule 132 (empty -> .)
    PRINT           reduce using rule 132 (empty -> .)
    IF              reduce using rule 132 (empty -> .)
    WHILE           reduce using rule 132 (empty -> .)
    DO              reduce using rule 132 (empty -> .)
    FOR             reduce using rule 132 (empty -> .)
    COMENTARIO      reduce using rule 132 (empty -> .)
    CUADRADO        reduce using rule 132 (empty -> .)
    TRIANGULO       reduce using rule 132 (empty -> .)
    CASA            reduce using rule 132 (empty -> .)
    RECTANGULO      reduce using rule 132 (empty -> .)
    CUBO            reduce using rule 132 (empty -> .)
    TRAPECIO        reduce using rule 132 (empty -> .)
    ESTRELLA        reduce using rule 132 (empty -> .)
    MUEVE           reduce using rule 132 (empty -> .)
    LEVANTA         reduce using rule 132 (empty -> .)
    APOYA           reduce using rule 132 (empty -> .)
    DIMENSION       reduce using rule 132 (empty -> .)
    RKEY            reduce using rule 132 (empty -> .)
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 9
    STRING          shift and go to state 13
    BOOL            shift and go to state 20

    tipo                           shift and go to state 31
    empty                          shift and go to state 34
    declaracion                    shift and go to state 32
    b3                             shift and go to state 43

state 33

    (12) bloque -> LKEY b3 . b4 b5
    (15) b4 -> . estatuto b4
    (16) b4 -> . empty
    (73) estatuto -> . asignacion
    (74) estatuto -> . print
    (75) estatuto -> . condicion
    (76) estatuto -> . ciclowhile
    (77) estatuto -> . ciclodowhile
    (78) estatuto -> . ciclofor
    (79) estatuto -> . read
    (80) estatuto -> . comentario
    (81) estatuto -> . cuadrado
    (82) estatuto -> . triangulo
    (83) estatuto -> . casa
    (84) estatuto -> . rectangulo
    (85) estatuto -> . cubo
    (86) estatuto -> . trapecio
    (87) estatuto -> . estrella
    (88) estatuto -> . mueve
    (89) estatuto -> . levanta
    (90) estatuto -> . apoya
    (91) estatuto -> . dimension
    (92) estatuto -> . llamafuncion
    (93) estatuto -> . if
    (132) empty -> .
    (41) asignacion -> . ID asig2
    (47) print -> . PRINT LPARENT pr2
    (52) condicion -> . IF LKEY expresion RKEY bloque c2
    (99) ciclowhile -> . WHILE LPARENT expresion RPARENT bloque
    (100) ciclodowhile -> . DO bloque WHILE LPARENT expresion RPARENT PUNTOCOMA
    (102) ciclofor -> . FOR LPARENT asignacion expresion asignacion RPARENT bloque
    (101) read -> . ID IGUAL READ LPARENT RPARENT PUNTOCOMA
    (94) comentario -> . COMENTARIO
    (106) cuadrado -> . CUADRADO LPARENT exp RPARENT PUNTOCOMA
    (107) triangulo -> . TRIANGULO LPARENT exp RPARENT PUNTOCOMA
    (109) casa -> . CASA LPARENT exp COMA exp RPARENT PUNTOCOMA
    (108) rectangulo -> . RECTANGULO LPARENT exp COMA exp RPARENT PUNTOCOMA
    (111) cubo -> . CUBO LPARENT exp RPARENT PUNTOCOMA
    (115) trapecio -> . TRAPECIO LPARENT exp COMA exp RPARENT PUNTOCOMA
    (110) estrella -> . ESTRELLA LPARENT exp RPARENT PUNTOCOMA
    (112) mueve -> . MUEVE LPARENT exp COMA exp RPARENT PUNTOCOMA
    (113) levanta -> . LEVANTA LPARENT RPARENT PUNTOCOMA
    (114) apoya -> . APOYA LPARENT RPARENT PUNTOCOMA
    (116) dimension -> . DIMENSION LPARENT exp RPARENT PUNTOCOMA
    (125) llamafuncion -> . ID LPARENT llamaf11
    (103) if -> . IF LPARENT expresion RPARENT bloque if2

    RKEY            reduce using rule 132 (empty -> .)
    ID              shift and go to state 77
    PRINT           shift and go to state 50
    IF              shift and go to state 79
    WHILE           shift and go to state 47
    DO              shift and go to state 44
    FOR             shift and go to state 70
    COMENTARIO      shift and go to state 69
    CUADRADO        shift and go to state 83
    TRIANGULO       shift and go to state 68
    CASA            shift and go to state 56
    RECTANGULO      shift and go to state 57
    CUBO            shift and go to state 64
    TRAPECIO        shift and go to state 49
    ESTRELLA        shift and go to state 80
    MUEVE           shift and go to state 45
    LEVANTA         shift and go to state 84
    APOYA           shift and go to state 67
    DIMENSION       shift and go to state 78

    b4                             shift and go to state 46
    apoya                          shift and go to state 48
    trapecio                       shift and go to state 51
    comentario                     shift and go to state 52
    levanta                        shift and go to state 53
    if                             shift and go to state 54
    triangulo                      shift and go to state 55
    estatuto                       shift and go to state 58
    mueve                          shift and go to state 59
    ciclowhile                     shift and go to state 60
    llamafuncion                   shift and go to state 61
    cuadrado                       shift and go to state 62
    rectangulo                     shift and go to state 63
    print                          shift and go to state 65
    empty                          shift and go to state 66
    read                           shift and go to state 71
    cubo                           shift and go to state 72
    ciclofor                       shift and go to state 73
    estrella                       shift and go to state 74
    condicion                      shift and go to state 75
    ciclodowhile                   shift and go to state 76
    casa                           shift and go to state 81
    asignacion                     shift and go to state 82
    dimension                      shift and go to state 85

state 34

    (14) b3 -> empty .

    ID              reduce using rule 14 (b3 -> empty .)
    PRINT           reduce using rule 14 (b3 -> empty .)
    IF              reduce using rule 14 (b3 -> empty .)
    WHILE           reduce using rule 14 (b3 -> empty .)
    DO              reduce using rule 14 (b3 -> empty .)
    FOR             reduce using rule 14 (b3 -> empty .)
    COMENTARIO      reduce using rule 14 (b3 -> empty .)
    CUADRADO        reduce using rule 14 (b3 -> empty .)
    TRIANGULO       reduce using rule 14 (b3 -> empty .)
    CASA            reduce using rule 14 (b3 -> empty .)
    RECTANGULO      reduce using rule 14 (b3 -> empty .)
    CUBO            reduce using rule 14 (b3 -> empty .)
    TRAPECIO        reduce using rule 14 (b3 -> empty .)
    ESTRELLA        reduce using rule 14 (b3 -> empty .)
    MUEVE           reduce using rule 14 (b3 -> empty .)
    LEVANTA         reduce using rule 14 (b3 -> empty .)
    APOYA           reduce using rule 14 (b3 -> empty .)
    DIMENSION       reduce using rule 14 (b3 -> empty .)
    RKEY            reduce using rule 14 (b3 -> empty .)


state 35

    (118) function -> VOID ID LPARENT . funct11
    (119) funct11 -> . function4
    (120) funct11 -> . funct2
    (124) function4 -> . RPARENT bloque
    (121) funct2 -> . tipo ID funct3
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . CHAR
    (39) tipo -> . STRING
    (40) tipo -> . BOOL

    RPARENT         shift and go to state 90
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 9
    STRING          shift and go to state 13
    BOOL            shift and go to state 20

    tipo                           shift and go to state 87
    funct2                         shift and go to state 88
    funct11                        shift and go to state 89
    function4                      shift and go to state 86

state 36

    (32) decla1 -> LBRACKET . exp decla2
    (24) exp -> . termino tagsacops exp2
    (55) termino -> . factor tagsacopm te2
    (60) factor -> . LPARENT tagfondofalso expresion RPARENT tagsacafondo
    (61) factor -> . f2
    (62) factor -> . f3
    (63) factor -> . f6
    (64) factor -> . f7
    (65) f2 -> . varcte
    (66) f3 -> . ID
    (72) f6 -> . llamafuncion
    (69) f7 -> . ID LBRACKET exp f8
    (95) varcte -> . ENTERO
    (96) varcte -> . FLOTANTE
    (97) varcte -> . CADENA
    (98) varcte -> . CARACTER
    (125) llamafuncion -> . ID LPARENT llamaf11

    LPARENT         shift and go to state 96
    ID              shift and go to state 103
    ENTERO          shift and go to state 101
    FLOTANTE        shift and go to state 105
    CADENA          shift and go to state 99
    CARACTER        shift and go to state 102

    f2                             shift and go to state 91
    f3                             shift and go to state 92
    varcte                         shift and go to state 97
    f6                             shift and go to state 93
    f7                             shift and go to state 94
    llamafuncion                   shift and go to state 98
    termino                        shift and go to state 95
    exp                            shift and go to state 104
    factor                         shift and go to state 100

state 37

    (117) function -> tipo ID LPARENT . funct11
    (119) funct11 -> . function4
    (120) funct11 -> . funct2
    (124) function4 -> . RPARENT bloque
    (121) funct2 -> . tipo ID funct3
    (36) tipo -> . INT
    (37) tipo -> . FLOAT
    (38) tipo -> . CHAR
    (39) tipo -> . STRING
    (40) tipo -> . BOOL

    RPARENT         shift and go to state 90
    INT             shift and go to state 18
    FLOAT           shift and go to state 19
    CHAR            shift and go to state 9
    STRING          shift and go to state 13
    BOOL            shift and go to state 20

    tipo                           shift and go to state 87
    funct2                         shift and go to state 88
    funct11                        shift and go to state 106
    function4                      shift and go to state 86

state 38

    (35) declafinal -> PUNTOCOMA .

    INT             reduce using rule 35 (declafinal -> PUNTOCOMA .)
    FLOAT           reduce using rule 35 (declafinal -> PUNTOCOMA .)
    CHAR            reduce using rule 35 (declafinal -> PUNTOCOMA .)
    STRING          reduce using rule 35 (declafinal -> PUNTOCOMA .)
    BOOL            reduce using rule 35 (declafinal -> PUNTOCOMA .)
    VOID            reduce using rule 35 (declafinal -> PUNTOCOMA .)
    LKEY            reduce using rule 35 (declafinal -> PUNTOCOMA .)
    ID              reduce using rule 35 (declafinal -> PUNTOCOMA .)
    PRINT           reduce using rule 35 (declafinal -> PUNTOCOMA .)
    IF              reduce using rule 35 (declafinal -> PUNTOCOMA .)
    WHILE           reduce using rule 35 (declafinal -> PUNTOCOMA .)
    DO              reduce using rule 35 (declafinal -> PUNTOCOMA .)
    FOR             reduce using rule 35 (declafinal -> PUNTOCOMA .)
    COMENTARIO      reduce using rule 35 (declafinal -> PUNTOCOMA .)
    CUADRADO        reduce using rule 35 (declafinal -> PUNTOCOMA .)
    TRIANGULO       reduce using rule 35 (declafinal -> PUNTOCOMA .)
    CASA            reduce using rule 35 (declafinal -> PUNTOCOMA .)
    RECTANGULO      reduce using rule 35 (declafinal -> PUNTOCOMA .)
    CUBO            reduce using rule 35 (declafinal -> PUNTOCOMA .)
    TRAPECIO        reduce using rule 35 (declafinal -> PUNTOCOMA .)
    ESTRELLA        reduce using rule 35 (declafinal -> PUNTOCOMA .)
    MUEVE           reduce using rule 35 (declafinal -> PUNTOCOMA .)
    LEVANTA         reduce using rule 35 (declafinal -> PUNTOCOMA .)
    APOYA           reduce using rule 35 (declafinal -> PUNTOCOMA .)
    DIMENSION       reduce using rule 35 (declafinal -> PUNTOCOMA .)
    RKEY            reduce using rule 35 (declafinal -> PUNTOCOMA .)


state 39

    (30) declaracion -> tipo ID decla1 .
